Added network restrictions
- Restrict to IP addresses
- Restrict to own subnet

--- a/config/anyplugin.cfg
+++ b/config/anyplugin.cfg
@@ -3,5 +3,7 @@ activated=True
 ConfigVersion=1
 security_mode = unsecure
 # security_mode = restricted
-authentication=off
+authentication= off
+restrict_subnet = true
+allowed_remote_ips = 
 runas=root
