--- a/plugin.cfg
+++ b/plugin.cfg
@@ -10,7 +10,7 @@ EMAIL=christiantf@gmx.at
 [PLUGIN]
 # The version of your plugin - important if you would like to write an
 # upgrade script.
-VERSION=0.1.4
+VERSION=0.2.0
 
 # Short name and prefered subfolder of your Plugin (do not use blanks - they
 # will be filtered - and use lowercase only)! Used for script names in
@@ -34,3 +34,8 @@ TITLE=Any Plugin
 # Plugin Interface
 # Do not change this if you are not knowing what you are doing!
 INTERFACE=1.0
+
+[AUTOUPDATE]
+AUTOMATIC_UPDATES=true
+RELEASECFG=https://raw.githubusercontent.com/christianTF/LoxBerry-Plugin-Any/master/release.cfg
+PRERELEASECFG=https://raw.githubusercontent.com/christianTF/LoxBerry-Plugin-Any/master/prerelease.cfg
