--- a/prerelease.cfg
+++ b/prerelease.cfg
@@ -11,4 +11,4 @@ VERSION=0.2.1
 ARCHIVEURL=https://github.com/christianTF/LoxBerry-Plugin-Any/archive/0.2.1.zip
 
 # URL for further information about this release
-# INFOURL=https://github.com/christianTF/LoxBerry-Plugin-CommandRecognition/commits
+INFOURL=https://github.com/christianTF/LoxBerry-Plugin-Any/releases
