--- a/plugin.cfg
+++ b/plugin.cfg
@@ -10,7 +10,7 @@ EMAIL=christiantf@gmx.at
 [PLUGIN]
 # The version of your plugin - important if you would like to write an
 # upgrade script.
-VERSION=0.2.2
+VERSION=0.3.0
 
 # Short name and prefered subfolder of your Plugin (do not use blanks - they
 # will be filtered - and use lowercase only)! Used for script names in
@@ -33,7 +33,9 @@ TITLE=Any Plugin
 [SYSTEM]
 # Plugin Interface
 # Do not change this if you are not knowing what you are doing!
-INTERFACE=1.0
+LB_MINIMUM=2.0.4
+CUSTOM_LOGLEVELS=false
+INTERFACE=2.0
 
 [AUTOUPDATE]
 AUTOMATIC_UPDATES=true
